--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,32 +1,31 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Define the project name
-project(srm_main)
+project(srs_main)
 
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Set the include directories
 set(INCLUDES inc)
-set(SOURCES 
-    src/main.cpp    
-    )
+
+# Set the source files
+set(SOURCES src/main.cpp)
 
 # Add the executable target
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -pedantic)
-
+# Include the specified include directories
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDES})
 
+# Find the Mosquitto library
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(MOSQUITTO REQUIRED libmosquitto)
 
+# Include the Mosquitto headers
+include_directories(${MOSQUITTO_INCLUDE_DIRS})
 
-# # Find the Mosquitto library
-# find_package(PkgConfig REQUIRED)
-# pkg_check_modules(MOSQUITTO REQUIRED libmosquitto)
+# Link the Mosquitto library to the executable
+target_link_libraries(${PROJECT_NAME} ${MOSQUITTO_LIBRARIES})
 
-# # Include the Mosquitto headers
-# include_directories(${MOSQUITTO_INCLUDE_DIRS})
-
-# # Link the Mosquitto library to the executable
-# target_link_libraries(${PROJECT_NAME} ${MOSQUITTO_LIBRARIES})
