--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -19,6 +19,10 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 # Include the specified include directories
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDES})
 
+# Set compiler flags for Debug and Release builds
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -Wall -fmessage-length=0")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fmessage-length=0")
+
 # Find the Mosquitto library
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(MOSQUITTO REQUIRED libmosquitto)
@@ -28,4 +32,7 @@ include_directories(${MOSQUITTO_INCLUDE_DIRS})
 
 # Link the Mosquitto library to the executable
 target_link_libraries(${PROJECT_NAME} ${MOSQUITTO_LIBRARIES})
+
+# Print the build type
+message(STATUS "[INFO] Build type: ${CMAKE_BUILD_TYPE}")
 
