--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -11,7 +11,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(INCLUDES inc)
 
 # Set the source files
-set(SOURCES src/main.cpp)
+set(SOURCES src/main.cpp
+    src/logger.cpp
+)
 
 # Add the executable target
 add_executable(${PROJECT_NAME} ${SOURCES})
