--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -4,16 +4,18 @@ cmake_minimum_required(VERSION 3.10)
 project(srs_main)
 
 # Specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Set the include directories
 set(INCLUDES inc)
 
 # Set the source files
-set(SOURCES src/main.cpp
+set(SOURCES 
     src/logger.cpp
+    src/main.cpp
     src/MqttClient.cpp
+    src/SysMonitor.cpp
 )
 
 # Add the executable target
