Refactor CMakeLists to add test directory and update include directories

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -9,4 +9,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add subdirectories
 add_subdirectory(src)
-# add_subdirectory(tests)
+add_subdirectory(test)
