Refactor CMakeLists to enable testing and update project structure

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -7,6 +7,8 @@ project(srs_main)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+enable_testing()
+
 # Add subdirectories
 add_subdirectory(src)
 add_subdirectory(test)
