Fix CMakeLists to discover all tests

--- a/test/CMakelists.txt
+++ b/test/CMakelists.txt
@@ -9,16 +9,26 @@ set(TEST_SOURCES
     HwMonitor_test.cpp
     )
 
+set(SOURCES
+    ../src/HwMonitor.cpp
+    ../src/logger.cpp  # Include the logger source file
+    )
+
 set (MOCK_SOURCES)
 
 # Add the test executable
-add_executable(runTests ${TEST_SOURCES} ${MOCK_SOURCES})
+add_executable(runTests ${TEST_SOURCES} ${MOCK_SOURCES} ${SOURCES})
 
 # Include the specified include directories
 target_include_directories(runTests PRIVATE ${INCLUDES})
+
+# Define USE_STDOUT for the test executable
+target_compile_definitions(runTests PRIVATE USE_STDOUT)
 
 # Link Google Test and the main project
 target_link_libraries(runTests gtest gtest_main)
 
 # Add tests
-add_test(NAME runTests COMMAND runTests)
+# Discover and register tests
+include(GoogleTest)
+gtest_discover_tests(runTests)
