Refactor Scheduler and add a simple test

--- a/test/CMakelists.txt
+++ b/test/CMakelists.txt
@@ -7,6 +7,8 @@ set(INCLUDES ../inc)
 # Set the sources
 set(TEST_SOURCES
     HwMonitor_test.cpp
+    Scheduler_test.cpp
+    SysMonitor_test.cpp
     )
 
 set(SOURCES
