--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Define the project name
-project(srs_main)
+project(sys_mon)
 
 # Specify the C++ standard
 set(CMAKE_CXX_STANDARD 14)
