--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -12,8 +12,71 @@ enable_testing()
 # Enable verbose makefile
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
+# Set the include directories
+set(INCLUDES inc)
+
+# Set the source files
+set(SOURCES 
+    src/GetOptions.cpp
+    src/HwMonitor.cpp
+    src/logger.cpp
+    src/main.cpp
+    src/MqttClient.cpp
+    src/Scheduler.cpp
+    src/SysMonitor.cpp
+)
+
+# Add the executable target
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Add the external json directory
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+add_subdirectory(${CMAKE_SOURCE_DIR}/ext/json ${CMAKE_BINARY_DIR}/ext/json)
+
+# Include the specified include directories
+target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDES})
+
+# Set compiler flags for Debug and Release builds
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -Wall -fmessage-length=0")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -fmessage-length=0")
+
+# Find the Mosquitto library
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(MOSQUITTO REQUIRED libmosquitto)
+
+# Include the Mosquitto headers
+include_directories(${MOSQUITTO_INCLUDE_DIRS})
+
+# Link libraries to the executable
+target_link_libraries(${PROJECT_NAME} 
+    PRIVATE nlohmann_json::nlohmann_json
+    ${MOSQUITTO_LIBRARIES}
+    )
+
+# Add compile definitions for Release build
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE 
+    USE_SYSLOG
+    )
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE 
+    USE_SYSLOG 
+    USE_STDOUT
+    )
+endif()
+
+# Print the build type
+message("====================================================")
+message(STATUS "[INFO] Build type: ${CMAKE_BUILD_TYPE}")
+# Print all used target definitions:
+get_target_property(TARGET_COMPILE_DEFINITIONS ${PROJECT_NAME} COMPILE_DEFINITIONS)
+message(STATUS "[INFO] Target compile definitions: ${TARGET_COMPILE_DEFINITIONS}")
+message("====================================================")
+
 # Add subdirectories
-add_subdirectory(src)
+# add_subdirectory(src)
 add_subdirectory(test)
 
 # Ensure the destination directory exists
@@ -22,4 +85,3 @@ install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory /usrdat
 # Install procedure
 install(TARGETS sys_mon DESTINATION /usrdata/bin/)
 install(FILES ${CMAKE_SOURCE_DIR}/etc/systemd/sys_mon.service DESTINATION /etc/systemd/system)
-
