Add uninstall procedure for sys_mon service in CMake configuration

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -90,3 +90,14 @@ install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory /usrdat
 # Install procedure
 install(TARGETS sys_mon DESTINATION /usrdata/bin/)
 install(FILES ${CMAKE_SOURCE_DIR}/etc/systemd/sys_mon.service DESTINATION /etc/systemd/system)
+
+# Include the uninstall procedure
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+  IMMEDIATE @ONLY
+)
+
+add_custom_target(uninstall
+  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
+)
