Update devcontainer configuration to install multiple packages in postCreateCommand and remove redundant script

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,5 +54,5 @@
     "remoteEnv": {
       "SSH_AUTH_SOCK": "/ssh-agent"
     },
-    "postCreateCommand": "ln -sf /ssh-agent /run/ssh-agent.socket && apt-get install sshpass"
+    "postCreateCommand": "apt install sshpass clang cppcheck gdb pkg-config libmosquitto-dev -y"
   }
