--- a/etc/systemd/generic/sys_mon.service
+++ b/etc/systemd/generic/sys_mon.service
@@ -5,7 +5,7 @@ Requires=mosquitto.service
 
 [Service]
 ExecStartPre=/bin/sleep 10
-ExecStart=/usrdata/bin/sys_mon -b localhost -p 1883 -r sys_mon/
+ExecStart=/usr/bin/sys_mon -c sys_mon_generic -b localhost -p 1883 -r sys_mon/
 Restart=on-failure
 RestartSec=3
 StartLimitIntervalSec=60
