--- a/etc/systemd/ap/sys_mon.service
+++ b/etc/systemd/ap/sys_mon.service
@@ -5,7 +5,7 @@ Requires=mosquitto.service
 
 [Service]
 ExecStartPre=/bin/sleep 10
-ExecStart=/usrdata/bin/sys_mon -c sys_mon_ap -b localhost -p 1883 -r fuba_sa/sys_mon/ap
+ExecStart=/usr/sbin/sys_mon -c sys_mon_ap -b 192.168.225.1 -p 1883 -r fuba_sa/sys_mon/ap
 Restart=on-failure
 RestartSec=3
 StartLimitIntervalSec=60
